--- a/src/html/_new-product-slider.htm
+++ b/src/html/_new-product-slider.htm
@@ -13,11 +13,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -42,11 +42,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -71,11 +71,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -100,11 +100,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -129,11 +129,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -158,11 +158,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -187,11 +187,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -216,11 +216,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -245,11 +245,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html"  class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -274,11 +274,11 @@
                     <div class="swiper-slide__product-slide product-slide">
                         <div class="product-slide__body">
                             <div class="product-slide__item item-product">
-                                <a href="#" class="item-product__image">
+                                <a href="product.html" class="item-product__image">
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
