--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
 					"title":"Новинки",
 					"moretext":"Больше новинок"
 				})
-				<section class="page__articles articles">
+				<section id="articles" class="page__articles articles">
 					<div class="articles__container">
 						<h3 class="articles__title">Наши статьи</h3>
 						<div class="articles__body">
