--- a/src/catalog.html
+++ b/src/catalog.html
@@ -167,11 +167,11 @@
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
                                             <div class="product-slide__sale">-50%</div>
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -192,11 +192,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -217,11 +217,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -243,11 +243,11 @@
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
                                             <div class="product-slide__sale">-50%</div>
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -268,11 +268,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -293,11 +293,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -318,11 +318,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -343,11 +343,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -368,11 +368,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
@@ -393,11 +393,11 @@
                                     </div>
                                     <div class="product-slide__body">
                                         <div class="product-slide__item item-product">
-                                            <a href="#" class="item-product__image">
+                                            <a href="product.html" class="item-product__image">
                                                 <img src="@img/product-card-01.jpg" alt="image">
                                             </a>
                                             <div class="item-product__content content-product-slide">
-                                                <div class="content-product-slide__title">Нож Лиса</div>
+                                                <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                                 <div class="content-product-slide__descr product-descr">
                                                     <div class="product-descr__size">95х18</div>
                                                     <div class="product-descr__material">Орех, Алюминий</div>
