--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -89,7 +89,7 @@
 						<button type="submit" class="contacts-footer__button _icon-spoler-arrow"></button>
 						<div class="checkbox">
 							<input id="c_1" data-error="Ошибка" class="checkbox__input" type="checkbox" data-required="email" value="1" name="form[]">
-							<label for="c_1" class="checkbox__label"><span class="checkbox__text">Я прочитал Условия соглашения и 
+							<label for="c_1" class="checkbox__label"><span class="checkbox__text checkbox__text--footer">Я прочитал Условия соглашения и 
 								согласен с условиями </span></label>
 						</div>
 					</form>
