--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -6,7 +6,7 @@
 					<li class="menu-top-header__item menu-top-header__item_catalog"><a href=""class="menu-top-header__link menu-top-header__link_catalog _icon-arrow_down">Каталог товаров</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">О нас</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Оплата и доставка</a></li>
-					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Новости</a></li>
+					<li class="menu-top-header__item"><a href="#articles" class="menu-top-header__link">Новости</a></li>
 					<li class="menu-top-header__item"><a href="" class="menu-top-header__link">Контакты</a></li>
 				</ul>
 			</nav>
