--- a/src/html/_product-slider.htm
+++ b/src/html/_product-slider.htm
@@ -17,7 +17,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -46,7 +46,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -75,7 +75,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -104,7 +104,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -133,7 +133,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -162,7 +162,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -191,7 +191,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -220,7 +220,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -249,7 +249,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
@@ -278,7 +278,7 @@
                                     <img src="@img/product-card-01.jpg" alt="image">
                                 </a>
                                 <div class="item-product__content content-product-slide">
-                                    <div class="content-product-slide__title">Нож Лиса</div>
+                                    <a href="product.html" class="content-product-slide__title">Нож Лиса</a>
                                     <div class="content-product-slide__descr product-descr">
                                         <div class="product-descr__size">95х18</div>
                                         <div class="product-descr__material">Орех, Алюминий</div>
